fix: small spacing adjustments

--- a/apps/frontend/components/pages/Login/Login.module.css
+++ b/apps/frontend/components/pages/Login/Login.module.css
@@ -10,8 +10,11 @@
 .form {
   max-width: 25rem;
   margin: 3rem auto 0;
+  height: 230px;
+  display: flex;
+  flex-direction: column;
 }
 
 .submit {
-  margin: 2rem auto 0;
+  margin-top: auto;
 }
